# master-thesis

./: .gitignore  Dockerfile  Makefile  README.md  bibliography.bib  docker-compose.yml  flake.nix  index.html  issues.md  metadata.yaml  metadata.yml  print.html  shell.nix
code/: aperture-emittance-requirement.py  chromaticity.py  emittance-derivation.py  pyproject.toml  twiss_plots.py
code/benchmarks/: accumulate_array.py
code/benchmarks/twiss_product/: c_api.py  cffi_twiss_product.py  pythran_twiss_product.py  twiss_product.py
code/demo/: .gitignore
code/demo/accelerator-model/: accelerator-model.py  bessy3_5ba-20p_v_reference.json  fodo_twiss.py  gui.py  script.py
code/demo/necktie-plot/: Instructions.md  apace-necktie.py  elegant-necktie.py  fodo.lte  twiss.ele
code/demo/optimizer/: b2_q5t2off.json  bessy2_q5t2off.json  optimize.py  plot.py  script.py
code/lattice-design/: .gitignore  dba.py  lattice-design.py  max-i-modified.json  max-i.py  mba.py  orbit_displacement.py  script.py
code/lattice-design/booster/: booster.md
code/lattice-design/dba/: achromatic_condition.py  dba.json  dba.py  distance.py  lattice.lte  quad_scan.py  quad_scan_2_families.py  quad_scan_plot.py  (+1 more)
code/lattices/: bessy2_q5t2off_v1_2017_03_28.json  bessy2_q5t2off_v3betaymin_2019_05_07_loco.json  bessy2_q5t2off_v4_2017_03_28.json  bessy2_q5t2off_v4_2017_08_04.json  bessy2_stduser_2017_03_28.json  bessy2_stduser_2017_08_04.json  bessy2_t2_high_x.json  bessy2_t2_high_x_y.json
code/master_thesis/: __init__.py
code/q5t2off/: beta_beat.py  phase_acceptance.py  plots.py
(+86 files in other folders)
