[tool.poetry]
name = "master-thesis"
version = "0.0.0"
description = ""
authors = ["Felix Andreas <felix.andreas@physik.hu-berlin.de>"]

[tool.poetry.dependencies]
python = "~3.8"
apace = { path = "../../apace", develop = true }
numpy = "^1.21.4"
scipy = "^1.7.3"
pandas = "^1.3.3"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
isort = "^5.9.3"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
